[package]
name = "es-wifi-driver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Driver for the es-wifi adapter from Inventek."
repository = "https://github.com/drogue-iot/es-wifi-driver"
categories = [
    "embedded",
    "no-std",
    "wifi",
    "es-wifi",
    "iot",
]


[dependencies]
nom = { version = "6", default-features = false }
moveslice = { version = "2.0" }
heapless = "0.7"
futures-intrusive = { version = "0.4", default-features = false }
embassy-time = { version = "0.1.0", default-features = false }
embassy-sync = { version = "0.1.0", default-features = false, features = ["nightly"] }

embedded-hal = { package = "embedded-hal", version = "=1.0.0-alpha.9"}
embedded-hal-async = { version = "=0.1.0-alpha.3" }
embedded-io = { version = "0.3.0", features = ["async"] }
embedded-nal-async = { version = "0.2.0" }

[dev-dependencies]
embassy-executor = { default-features = false, features = ["integrated-timers"], git = "https://github.com/embassy-rs/embassy.git", rev = "61560e740dea1b4c7ca036dafd66c834a1ff92e2" }

[features]
std = ["embassy-time/std"]
default = [ "std" ]
