[package]
name = "es-wifi-driver"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Driver for the es-wifi adapter from Inventek."
repository = "https://github.com/drogue-iot/es-wifi-driver"
categories = [
    "embedded",
    "no-std",
    "wifi",
    "es-wifi",
    "iot",
]


[dependencies]
nom = { version = "6", default-features = false }
moveslice = { version = "2.0" }
heapless = "0.7"
futures-intrusive = { version = "0.4", default-features = false }
embassy-time = { version = "0.1.0", default-features = false }
embassy-sync = { version = "0.1.0", default-features = false, features = ["nightly"] }
atomic-polyfill = "1"
defmt = { version = "0.3", optional = true }

embedded-hal = "=1.0.0-alpha.9"
embedded-hal-async = "=0.2.0-alpha.0"
embedded-io = { version = "0.4.0", features = ["async"] }
embedded-nal-async = "0.4.0"

[dev-dependencies]
embassy-executor = { default-features = false, features = ["integrated-timers"], git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }

[features]
std = ["embassy-time/std"]
default = [ "std" ]
