[package]
edition = "2021"
name = "stm32l4-discovery-kit"
version = "0.1.0"
resolver = "2"
description = "STM32 IoT Discovery board WiFi example"
keywords = ["wifi", "stm32l4", "networking", "iot", "stm32", "cloud"]

[workspace]

[dependencies]
defmt = "0.3"
defmt-rtt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = "1"
cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }

embedded-nal-async = "0.3.0"
cfg-if = "1.0.0"

embedded-io = "0.4.0"

atomic-polyfill = "1"
embassy-executor = { version = "0.1.0", default-features = false, features=["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", default-features = false }
embassy-stm32 = { version = "0.1.0", default-features = false, features = ["time-driver-any", "unstable-traits", "stm32l475vg", "exti", "nightly", "memory-x"] }
embedded-hal = { version = "0.2.4", features = ["unproven"] }

es-wifi-driver = { path = "../../", default-features = false, features = ["defmt"] }

[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }
embassy-executor = {git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }
